--- a/CookPal/app/src/main/res/drawable/view_border_green.xml
+++ b/CookPal/app/src/main/res/drawable/view_border_green.xml
@@ -1,5 +1,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@color/light_green" />
-    <stroke android:width="5dip" android:color="#ffffff"/>
+    <solid android:color="@color/green" />
+    <stroke android:width="3dip" android:color="#ffffff"/>
 </shape>
