--- a/CookPal/app/src/main/res/layout/activity_edit_recipe.xml
+++ b/CookPal/app/src/main/res/layout/activity_edit_recipe.xml
@@ -28,6 +28,8 @@
 
 
     </LinearLayout>
+
+    <!-- instructions textview+button-->
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -49,71 +51,26 @@
             android:clickable="true"
             />
     </LinearLayout>
+    <!-- instructions listview -->
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/instructionsLayout"
-        android:layout_gravity="left|top">
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <ListView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/recipe_name2"
-            android:layout_gravity="left|top">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1."
-                android:id="@+id/recipe_name_text2"
-                android:password="false" />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/ingredient"
-                android:layout_gravity="center_horizontal" />
+            android:layout_height="0dp"
+            android:id="@+id/instructionsListView"
+            android:layout_weight="1"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Time: "
-                android:id="@+id/timeTextView" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText3"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="hrs"
-                android:id="@+id/hoursTextView1" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/minsEditText1"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="mins"
-                android:id="@+id/minsTextView" />
-        </LinearLayout>
-    </LinearLayout>
-
-
+    <!--ingredients textview + button
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/addIngredientsButtonLayout"
-        android:layout_gravity="left|top" >
+        android:layout_gravity="left|top">
 
         <TextView
             android:layout_width="wrap_content"
@@ -124,53 +81,28 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add more instructions"
+            android:text="Add more ingredients"
             android:id="@+id/addIngredientsButton"
-            android:clickable="true" />
-    </LinearLayout>
+            android:clickable="true"
+            />
+    </LinearLayout>-->
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addIngredientsLayout"
-        android:layout_gravity="left|top" >
 
-        <LinearLayout
-            android:orientation="horizontal"
+    <!-- ingredients listview
+
+
+        <ListView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/linearLayout2"
-            android:layout_gravity="left|top" >
+            android:layout_height="0dp"
+            android:id="@+id/ingredientsListView"
+            android:layout_weight="1"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1."
-                android:id="@+id/textView2"
-                android:password="false" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText"
-                android:layout_gravity="center_horizontal" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quantity: "
-                android:id="@+id/quantityTextView" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText2"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-    </LinearLayout>
-
+    <!-- confirm create recipe
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -182,9 +114,9 @@
             android:id="@+id/confirm_create_recipe_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/confirm_create_recipe_button" />
+            android:text="Confirm create recipe" />
 
 
     </LinearLayout>
-
+-->
 </LinearLayout>
