--- a/CookPal/app/src/main/res/layout/ingredients_tab.xml
+++ b/CookPal/app/src/main/res/layout/ingredients_tab.xml
@@ -3,12 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Design Games Screen"
-        android:textSize="20dp"
-        android:layout_centerInParent="true"/>
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/ingredientListView"/>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:id="@+id/ingredientLinearLayout">
+
+
+            </LinearLayout>
+
+
+
 
 
 </RelativeLayout>
