--- a/CookPal/app/src/main/res/layout/editrecipeinstruction_listview_entry.xml
+++ b/CookPal/app/src/main/res/layout/editrecipeinstruction_listview_entry.xml
@@ -2,9 +2,16 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text=""
+        android:id="@+id/stepNoTextView" />
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/stepNoTextView"
         android:id="@+id/instructionEditText"
         android:layout_weight="1" />
     <TextView
