--- a/CookPal/app/src/main/res/layout/ingredients_tab.xml
+++ b/CookPal/app/src/main/res/layout/ingredients_tab.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical">
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/ingredientListView"/>
+
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:id="@+id/ingredientLinearLayout">
+            android:id="@+id/ingredientLinearLayout"
+            android:paddingLeft="30dp"
+            android:paddingRight="20dp">
+
+        </LinearLayout>
 
 
-            </LinearLayout>
 
 
 
-
-
-</RelativeLayout>
+</ScrollView>
