--- a/CookPal/app/src/main/res/values/dimens.xml
+++ b/CookPal/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="sign_in_button_top_margin">380dp</dimen>
+    <dimen name="sign_up_button_top_margin">90dp</dimen>
 </resources>
